opam-version: "1.2"
maintainer: "zoggy@bat8.org"
authors: ["Maxence Guesdon"]
homepage: "http://zoggy.github.io/ocamlrss/"
license: "GNU Lesser General Public License version 3"
doc: ["http://zoggy.github.io/ocamlrss/refdoc/Rss.html"]
tags: [
  "rss"
  "xml"
  "rdf"
]
build: [ "jbuilder" "build" "@install" ]
remove: [["ocamlfind" "remove" "rss"]]
depends: [
  "jbuilder {build}"
  "xmlm"
  "ptime"
]
